# credit-risk-transition-matrix

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/api/: risk_metrics.md  transition_matrix_learner.md  visualization.md
docs/theory/: pd_calculations.md  transition_matrices.md
docs/tutorials/: getting_started.ipynb
examples/: basic_usage.py
src/credit_risk_transition_matrix/: __init__.py
src/credit_risk_transition_matrix/core/: __init__.py  data_processor.py  transition_matrix_learner.py  validators.py
src/credit_risk_transition_matrix/utils/: __init__.py  config.py
src/credit_risk_transition_matrix/visualization/: __init__.py  heatmaps.py
tests/: __init__.py  test_comprehensive.py  test_import.py  test_transition_matrix_learner.py
